Fix random scenario layout

--- a/sections/random_scenario.tex
+++ b/sections/random_scenario.tex
@@ -233,7 +233,7 @@ Then, keeping the same order, place Far (II-III) Map Tiles, and finally Starting
 
 Choose your \textbf{starting conditions} and \textbf{Town strength}.
 
-\begin{table*}
+\begin{table}[H]
   \hommtable[]{27}{
     \centering
     \medskip
@@ -269,7 +269,7 @@ Choose your \textbf{starting conditions} and \textbf{Town strength}.
       & \lightcellleft[2.0]{\svg[12]{bronze} Dwelling \linebreak City Hall \linebreak Citadel}\\
     \end{tabularx}
   }
-\end{table*}
+\end{table}
 
 \begin{multicols}{2}
 
