--- a/translations/random_scenario.tex/fr.po
+++ b/translations/random_scenario.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-12-19 07:58+0000\n"
+"POT-Creation-Date: 2026-01-23 15:40+0000\n"
 "PO-Revision-Date: 2025-07-02 10:40+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -563,10 +563,11 @@ msgstr ""
 "Choisissez vos \\textbf{Conditions de Départ} et la \\textbf{Force de la "
 "Ville}."
 
-#. type: table*
+#. type: table
 #: sections/random_scenario.tex:273
 #, no-wrap
 msgid ""
+"[H]\n"
 "  \\hommtable[]{27}{\n"
 "    \\centering\n"
 "    \\medskip\n"
@@ -603,6 +604,7 @@ msgid ""
 "    \\end{tabularx}\n"
 "  }"
 msgstr ""
+"[H]\n"
 "  \\hommtable[]{27}{\n"
 "    \\centering\n"
 "    \\medskip\n"
