--- a/translations/random_scenario.tex/pl.po
+++ b/translations/random_scenario.tex/pl.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-12-19 07:58+0000\n"
+"POT-Creation-Date: 2026-01-23 15:40+0000\n"
 "PO-Revision-Date: 2025-06-22 00:57+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -560,10 +560,11 @@ msgstr "\\MakeUppercase{Przygotowanie Graczy}"
 msgid "Choose your \\textbf{starting conditions} and \\textbf{Town strength}."
 msgstr "Wybierz \\textbf{warunki początkowe} i \\textbf{siłę Miasta}."
 
-#. type: table*
+#. type: table
 #: sections/random_scenario.tex:273
 #, no-wrap
 msgid ""
+"[H]\n"
 "  \\hommtable[]{27}{\n"
 "    \\centering\n"
 "    \\medskip\n"
@@ -600,6 +601,7 @@ msgid ""
 "    \\end{tabularx}\n"
 "  }"
 msgstr ""
+"[H]\n"
 "  \\hommtable[]{27}{\n"
 "    \\centering\n"
 "    \\medskip\n"
