--- a/translations/random_scenario.tex/random_scenario.tex.pot
+++ b/translations/random_scenario.tex/random_scenario.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-12-19 07:58+0000\n"
+"POT-Creation-Date: 2026-01-23 15:40+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -425,10 +425,11 @@ msgstr ""
 msgid "Choose your \\textbf{starting conditions} and \\textbf{Town strength}."
 msgstr ""
 
-#. type: table*
+#. type: table
 #: sections/random_scenario.tex:273
 #, no-wrap
 msgid ""
+"[H]\n"
 "  \\hommtable[]{27}{\n"
 "    \\centering\n"
 "    \\medskip\n"
