--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -44,9 +44,11 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 At the end of Round 6, the player with the most Victory Points (VP) wins.
 Players get VPs for:
 \begin{itemize}
-  \item $R-1$ VPs for starting your turn on ``The Hill'', where $R$ is the Round number.
+  \item 6 VP for the player controlling the ``The Hill'' at the end of the game
+  \item $R-1$ VPs for starting your turn on ``The Hill'', where $R$ is the Round number
   \item 2 VP for winning a Combat against another player
   \item 1 VP for losing a Combat against another player
+  \item -2 VP for retreating from a Combat
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
@@ -108,34 +110,34 @@ Players get VPs for:
       \iftoggle{noartbackground}
       {\draw[draw=darkyellow, thick, pattern=north east lines, pattern color=darkyellow]}
       {\draw[draw=yellow!40!white!90!brown, line width=1.4pt, draw opacity=0.9, fill=yellow!50!white!80!brown, fill opacity=\iftoggle{noartbackground}{0.9}{0.5}]}
-        (0:0.44cm) -- (60:0.44cm) -- (120:0.44cm) --
-        (180:0.44cm) -- (240:0.44cm) -- (300:0.44cm) -- cycle;
+        (0:0.4cm) -- (60:0.4cm) -- (120:0.4cm) --
+        (180:0.4cm) -- (240:0.4cm) -- (300:0.4cm) -- cycle;
     \end{scope}
   }
 
-  \node at (13.5, -4) {\includegraphics[width=0.56\linewidth]{\maps/king_of_the_hill-3p.png}};
+  \node at (13.5, -4) {\includegraphics[width=0.5\linewidth]{\maps/king_of_the_hill-3p.png}};
 
-  \blocked{13.71}{-2.62}{90}
-  \blocked{11.28}{-5.39}{90}
-  \blocked{14.91}{-6.09}{90}
+  \blocked{13.68}{-2.75}{90}
+  \blocked{11.52}{-5.27}{90}
+  \blocked{14.78}{-5.88}{90}
 
-  \node at (17.5, -0.5) {\large{{\textbf{\textcolor{darkcandyapplered}{C1/C3}}}}};
+  \node at (17.5, -0.8) {\large{{\textbf{\textcolor{darkcandyapplered}{C1/C3}}}}};
 
-  \node at (13.33, -4.53) {{{\footnotesize{The}}}};
-  \node at (13.33, -4.82) {{{\footnotesize{Hill}}}};
+  \node at (13.33, -4.51) {{{\footnotesize{The}}}};
+  \node at (13.33, -4.8) {{{\footnotesize{Hill}}}};
 
   \node at (13.4, -9.5) {\textbf{3-PLAYER SCENARIO}};
 
-  \node at (4.6, -1.8) {\includegraphics[width=0.54\linewidth]{\maps/king_of_the_hill-2p.png}};
+  \node at (4.6, -3.8) {\includegraphics[width=0.5\linewidth]{\maps/king_of_the_hill-2p.png}};
 
-  \blocked{6.63}{-0.76}{90}
-  \blocked{2.57}{-2.15}{90}
+  \blocked{6.5}{-2.84}{90}
+  \blocked{2.7}{-4.11}{90}
 
-  \node at (6.8, -4.4) {\large{{\textbf{\textcolor{darkcandyapplered}{C1/C3}}}}};
+  \node at (6.8, -7.4) {\large{{\textbf{\textcolor{darkcandyapplered}{C1/C3}}}}};
 
-  \node at (4.61, -1.29) {{{\footnotesize{The}}}};
-  \node at (4.61, -1.58) {{{\footnotesize{Hill}}}};
+  \node at (4.61, -3.31) {{{\footnotesize{The}}}};
+  \node at (4.61, -3.6) {{{\footnotesize{Hill}}}};
 
-  \node at (4.6, -7.0) {\textbf{2-PLAYER SCENARIO}};
+  \node at (4.6, -9.0) {\textbf{2-PLAYER SCENARIO}};
 \end{tikzpicture}
 
