Apply suggestion from @qwrtln

--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -48,7 +48,7 @@ Players get VPs for:
   \item $R-1$ VPs for starting your turn on ``The Hill'', where $R$ is the Round number
   \item 2 VP for winning a Combat against another player
   \item 1 VP for losing a Combat against another player
-  \item -2 VP for retreating from a Combat
+  \item $-$2 VP for retreating from a Combat
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
